--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -5,10 +5,15 @@ name: Java CI with Maven
 
 on:
   push:
-    branches: [ master ]
+    branches: 
+     - master
+     - product
+     - rich
   pull_request:
-    branches: [ master ]
-
+    branches:
+      - masteк
+      - product
+      - rich
 jobs:
   build:
 
